--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel="stylesheet" href="https://www.20min.ch/static-assets/batonturbo.css" />
-    <link rel="stylesheet" href="./styles.css" />
+    <!-- <link rel="stylesheet" href="./styles.css" /> -->
 
 	<script defer src='/build/bundle.js'></script>
 </head>
